--- a/weka-package/Description.props
+++ b/weka-package/Description.props
@@ -1,71 +1,35 @@
-# Template Description file for a Weka package
-# 
-
 # Package name (required)
-PackageName=XNN
+PackageName=XNN2
 
 # Version (required)
-Version=1.0.0
+Version=2.0.0
 
 #Date (year-month-day)
-Date=2019-12-22
+Date=2021-05-19
 
 # Title (required)
-Title=Nearest neighbor-based classifier and filter with class relabelling.
+Title=Nearest neighbor-based ecosystem with both supervised and unsupervised algorithms using extended class information.
 
 # Category (recommended)
-Category=Preprocessing
+Category=Preprocessing,Classification
 
 # Author (required)
-Author=Gualberto Asencio-Cortes, PhD <guaasecor@upo.es>
+Author=Prof. Dr. Gualberto Asencio-Cortes <guaasecor@upo.es>
 
 # Maintainer (required)
-Maintainer=Gualberto Asencio-Cortes, PhD <guaasecor@upo.es>
+Maintainer=Prof. Dr. Gualberto Asencio-Cortes <guaasecor@upo.es>
 
 # License (required)
-License=GPL 2.0|Mozilla
+License=GPL 3.0|Mozilla
 
 # Description (required)
-Description=Supervised learning algorithm for both classification and regression. Implementation of the algorithm proposed in "Extendiendo la Semántica de los datos en Aprendizaje Supervisado".
+Description=Nearest neighbor-based ecosystem with both supervised and unsupervised algorithms using extended class information.
 
 # Package URL for obtaining the package archive (required)
-PackageURL=https://github.com/gualbe/XNN/raw/master/XNN.zip
+PackageURL=https://github.com/gualbe/XNN2/raw/master/XNN2.zip
 
 # URL for further information
-URL=https://github.com/gualbe/XNN/raw/master/XNN_paper.pdf
+URL=https://github.com/gualbe/XNN2
 
 # Dependencies (format: packageName (equality/inequality version_number)
 Depends=weka (>=3.7.1)
-
-# Message to display in installation. Can be used to provide
-# special instructions (e.g. manual stuff needed to complete
-# the installation process). (optional).
-#MessageToDisplayOnInstallation=Funky package requires some extra\n\stuff to be installed after installing this package. You will\n\need to blah, blah, blah in order to blah, blah, blah...
-
-# Prevent package from being loaded by Weka if the named
-# files/directories are not present (relative to the package's
-# root directory). Useful for packages that require the user
-# to manually install some third-party library(s). (optional)
-#DoNotLoadIfFileNotPresent=lib/someLibrary.jar,otherStuff/important,...
-
-# Log message to be displayed if package can't be loaded due to
-# missing files/directories. (optional)
-#DoNotLoadIfFileNotPresentMessage=funkyPackage can't be loaded because some funky libraries are missing. Please download funkyLibrary.jar from http://www.funky.com and install in $WEKA_HOME/packages/funkyPackage/lib
-
-# Prevent package from being loaded by Weka if the named
-# classes can't be instantiated. Useful for packages that rely
-# on stuff that has to be installed manually (an example is
-# Java3D, which installs itself into the system JRE/JDK. (optional)
-#DoNotLoadIfClassNotPresent=com.some.class.from.some.Where,org.some.other.Class,...
-
-# Log message to be displayed if package can't be loaded due to 
-# missing classes. (optional).
-#DoNotLoadIfClassNotPresentMessage=funkyPackage can't be loaded because com.funky.FunkyClass can't be instantiated. Have you downloaded and run the funky software installer for your platform?
-
-# Prevent package from being loaded by Weka if one or more (comma-separated)
-# environment variables or java properties are not set. (optional).
-#DoNotLoadIfEnvVarNotSet=
-
-# Log message to be displayed if package can't be loaded due to unset
-# environment variables or java properties.
-#DoNotLoadIfEnvVarNotSetMessage=
